--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <div id="nav-menu" class="toggle">
             <img src="assets/image/menu.png" alt="" id="menu-bars" class="toggle2"></a>
             <ul class="nav">
-               <li><a href="#" class="nav-element">Home</a></li>
-               <li><a href="#" class="nav-element">Features</a></li>
-               <li><a href="#" class="nav-element">Services</a></li>
-               <li><a href="#" class="nav-element">Testimonials</a></li>
-               <li><a href="#" class="nav-element">Meet Us</a></li>
+               <li><a href="#banner" class="nav-element">Home</a></li>
+               <li><a href="#feature" class="nav-element">Features</a></li>
+               <li><a href="#service" class="nav-element">Services</a></li>
+               <li><a href="#testimonial" class="nav-element">Testimonials</a></li>
+               <li><a href="#contact" class="nav-element">Meet Us</a></li>
             </ul>
           <img src="assets/image/close.png" alt=""  id="close" class="toggle2" ></a>
            
